@@ -1,4 +1,4 @@
-$Id: History,v 1.12 1999-10-12 12:05:51 stesting Exp $
+$Id: History,v 1.13 1999-10-21 14:40:42 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+21 Oct. 1999 John Allison
+- Made XtAppContext appContext static in G4Xt.cc.  Speeds OGLSXm but
+  OGLIXm is still slow - why?
 
 12 Oct. 1999 John Allison for Hajime Yoshida (tag interfaces-V00-01-00a)
 - Protection for zero length strings for Sun in G4UIterminal and G4UIGAG.
